hack/manifests/cert-manager-rh.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-operator
  labels:
    name: cert-manager-operator
