hack/manifests/nfd.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-nfd
