hack/manifests/nvidia-cpu-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-gpu-operator
